--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -283,6 +283,12 @@
     </div>
   </div>
 
+  <script>
+    // Pass environment variables to JavaScript
+    window.ENV = {
+      REFRESH_INTERVAL: {{ refresh_interval }}
+    };
+  </script>
   <script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
 </body>
 
